--- a/packages/doc/docs/getting-started.mdx
+++ b/packages/doc/docs/getting-started.mdx
@@ -23,4 +23,51 @@ With this simple commands you can create your application containing one simple 
 
 ## Folder structure
 
-<TodoTag />
+```bash
+  my-app
+  ├── package.json
+  ├── packages
+  |  ├── microfrontend # create-react-app structure folder
+  |  |  ├── README.md
+  |  |  ├── package.json
+  |  |  ├── public
+  |  |  |  ├── favicon.ico
+  |  |  |  ├── index.html
+  |  |  |  ├── logo192.png
+  |  |  |  ├── logo512.png
+  |  |  |  ├── manifest.json
+  |  |  |  └── robots.txt
+  |  |  ├── src
+  |  |  |  ├── App.css
+  |  |  |  ├── App.js
+  |  |  |  ├── App.test.js
+  |  |  |  ├── index.css
+  |  |  |  ├── index.js
+  |  |  |  ├── logo.svg
+  |  |  |  ├── serviceWorker.js
+  |  |  |  └── setupTests.js
+  |  |  └── yarn.lock
+  |  └── webapp # create-react-app structure folder
+  |     ├── README.md
+  |     ├── package.json
+  |     ├── public
+  |     |  ├── favicon.ico
+  |     |  ├── index.html
+  |     |  ├── logo192.png
+  |     |  ├── logo512.png
+  |     |  ├── manifest.json
+  |     |  ├── microfrontends
+  |     |  |  └── meta.json
+  |     |  └── robots.txt
+  |     ├── src
+  |     |  ├── App.css
+  |     |  ├── App.js
+  |     |  ├── App.test.js
+  |     |  ├── index.css
+  |     |  ├── index.js
+  |     |  ├── logo.svg
+  |     |  ├── serviceWorker.js
+  |     |  └── setupTests.js
+  |     └── yarn.lock
+  └── yarn.lock
+```
